Only run GitLab CI on pushes to master (#513)
Only push the master, staging and trying branches to gitlab.

Co-authored-by: Hannes Vogt <hannes@havogt.de>

--- a/.github/workflows/gt4py-gitlab-ci.yml
+++ b/.github/workflows/gt4py-gitlab-ci.yml
@@ -2,7 +2,9 @@ name: CI
 on:
   push:
     branches:
-    - '**'
+    - master
+    - trying
+    - staging
 jobs:
   build:
     runs-on: ubuntu-latest
