--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,7 @@ install_requires =
     dace@git+https://github.com/spcl/dace.git@aa94b8f603e2341215647ae0ce4056df55049fe2
     jinja2>=2.10
     numpy>=1.15
+    scipy>=1.4
     packaging>=20.0
     pybind11>=2.5
     tabulate>=0.8
