--- a/src/gt4py/backend/templates/stencil_module.py.in
+++ b/src/gt4py/backend/templates/stencil_module.py.in
@@ -31,7 +31,7 @@ gt_default_origin, gt_options
 import time
 
 import numpy as np
-import scipy
+import scipy.special
 from numpy import dtype
 {{ imports }}
 
