--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -75,9 +75,10 @@ repos:
 #     - pygments
 
 - repo: https://github.com/psf/black
-  rev: 21.9b0
+  rev: 21.11b1
   hooks:
   - id: black
+    args: [--target-version, py310]
 
 - repo: https://github.com/asottile/seed-isort-config
   rev: v2.2.0
