Remove dawn backends

--- a/setup.cfg
+++ b/setup.cfg
@@ -86,8 +86,6 @@ cuda101 =
     cupy-cuda101
 cuda102 =
     cupy-cuda102
-dawn =
-    dawn4py@git+https://github.com/MeteoSwiss-APN/dawn.git@0.0.2#subdirectory=dawn
 format =
     clang-format>=9.0
 testing =
@@ -184,7 +182,7 @@ lines_after_imports = 2
 default_section = THIRDPARTY
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 known_first_party = eve,gtc,gt4py,tests,__externals__,__gtscript__
-known_third_party = attr,black,boltons,cached_property,click,dace,dawn4py,devtools,factory,hypothesis,jinja2,mako,networkx,numpy,packaging,pkg_resources,pybind11,pydantic,pytest,pytest_factoryboy,setuptools,tabulate,typing_extensions,xxhash
+known_third_party = attr,black,boltons,cached_property,click,dace,devtools,factory,hypothesis,jinja2,mako,networkx,numpy,packaging,pkg_resources,pybind11,pydantic,pytest,pytest_factoryboy,setuptools,tabulate,typing_extensions,xxhash
 
 #-- mypy --
 [mypy]
