--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@
 
 [tox]
 envlist =
-    py{38,39}-{internal,dawn}-{cpu,cuda,cuda90,cuda91,cuda92,cuda100,cuda101}
+    py{38,39}-internal-{cpu,cuda,cuda90,cuda91,cuda92,cuda100,cuda101}
 
 [testenv]
 deps = -r {toxinidir}/requirements-dev.txt
@@ -21,7 +21,6 @@ whitelist_externals =
     ldd
 extras =
     testing
-    dawn: dawn
     cuda: cuda
     cuda90: cuda90
     cuda91: cuda91
@@ -29,13 +28,13 @@ extras =
     cuda100: cuda100
     cuda101: cuda101
 
-[testenv:py{38,39}-{internal,dawn}-cpu]
+[testenv:py{38,39}-internal-cpu]
 commands =
     pip list
     pytest --cache-clear --cov -v -m "not requires_gpu" {posargs}
     pytest --doctest-modules --cov --cov-append {envsitepackagesdir}/eve
 
-[testenv:py{38,39}-{internal,dawn}-{cuda,cuda90,cuda91,cuda92,cuda100,cuda101}]
+[testenv:py{38,39}-internal-{cuda,cuda90,cuda91,cuda92,cuda100,cuda101}]
 commands =
     pip list
     pytest --cache-clear --cov -v -m "requires_gpu" {posargs}
