Make dace an extra

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,7 +45,6 @@ install_requires =
     black>=19.3b0
     cached-property>=1.5
     click>=7.1
-    dace@git+https://github.com/spcl/dace.git@aa94b8f603e2341215647ae0ce4056df55049fe2
     jinja2>=2.10
     numpy>=1.15
     scipy>=1.4
@@ -86,6 +85,8 @@ cuda101 =
     cupy-cuda101
 cuda102 =
     cupy-cuda102
+dace =
+    dace@git+https://github.com/spcl/dace.git@aa94b8f603e2341215647ae0ce4056df55049fe2
 dawn =
     dawn4py@git+https://github.com/MeteoSwiss-APN/dawn.git@0.0.2#subdirectory=dawn
 format =
