Update to dace v0.12.0 Remove access type, rely on has_XXX for determining read/write

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,7 +45,7 @@ install_requires =
     black>=19.3b0
     cached-property>=1.5
     click>=7.1
-    dace@git+https://github.com/spcl/dace.git@c3a5d94b0aeb4ab2a251e0205da6e10327bfcd3f
+    dace@git+https://github.com/spcl/dace.git@v0.12
     jinja2>=2.10
     numpy>=1.15
     scipy>=1.4
