--- a/.github/workflows/gt4py-sphinx.yml
+++ b/.github/workflows/gt4py-sphinx.yml
@@ -8,6 +8,10 @@ on:
     branches:
     - master
 
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   sphinx-build:
     runs-on: ubuntu-latest
