--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -69,6 +69,7 @@ repos:
   - id: mypy
     exclude: |
       (?x)^(
+      src/eve/datamodels.py | # until pydantic deprecation
       src/functional/ffront/func_to_foast.py | # until mypy supports match
       src/functional/ffront/symbol_makers.py | # until mypy supports match
       src/functional/ffront/foast_passes/type_deduction.py | # until mypy supports match
