--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -69,7 +69,7 @@ repos:
   - id: mypy
     exclude: |
       (?x)^(
-      src/eve/datamodels.py | # until pydantic deprecation
+      src/eve/datamodels.py | # until datamodels is upgraded to 3.10
       src/functional/ffront/func_to_foast.py | # until mypy supports match
       src/functional/ffront/symbol_makers.py | # until mypy supports match
       src/functional/ffront/foast_passes/type_deduction.py | # until mypy supports match
