--- a/tox.ini
+++ b/tox.ini
@@ -28,4 +28,4 @@ extras =
 [testenv:py{310}]
 commands =
     pytest --cache-clear --cov -v {posargs}
-    pytest --doctest-modules --cov --cov-append {envsitepackagesdir}
+    pytest --doctest-modules --cov --cov-append src
