--- a/tox.ini
+++ b/tox.ini
@@ -17,13 +17,14 @@ whitelist_externals =
     g++
     ldd
 extras =
+    atlas
     testing
-    cuda: cuda
-    cuda90: cuda90
-    cuda91: cuda91
-    cuda92: cuda92
-    cuda100: cuda100
-    cuda101: cuda101
+    # cuda: cuda
+    # cuda90: cuda90
+    # cuda91: cuda91
+    # cuda92: cuda92
+    # cuda100: cuda100
+    # cuda101: cuda101
 
 [testenv:py{310}]
 commands =
