--- a/setup.cfg
+++ b/setup.cfg
@@ -65,6 +65,8 @@ exclude =
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
 # `pip install gt4py[cuda90]` like:
+atlas =
+    atlas4py@git+https://github.com/GridTools/atlas4py
 cuda =
     cupy
 cuda90 =
