--- a/.github/workflows/gt4py-functional.yml
+++ b/.github/workflows/gt4py-functional.yml
@@ -33,4 +33,4 @@ jobs:
     - name: Test
       run: |
         python -m pytest tests/
-        #python -m pytest --doctest-modules src
+        python -m pytest --doctest-modules src/
