More minor fixes

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,9 @@ envlist =
     py{310}
 
 [testenv]
-deps = -r {toxinidir}/requirements-dev.txt
+deps =
+    -r {toxinidir}/requirements-dev.txt
+    git+https://github.com/GridTools/atlas4py#egg=atlas4py
 install_command = python -m pip install --no-cache-dir {opts} {packages}
 commands_pre =
 passenv = BOOST_ROOT BOOST_HOME CUDA_HOME CUDA_PATH CXX CC OPENMP_CPPFLAGS OPENMP_LDFLAGS PIP_USER PYTHONUSERBASE
@@ -16,15 +18,6 @@ whitelist_externals =
     gcc
     g++
     ldd
-extras =
-    atlas
-    testing
-    # cuda: cuda
-    # cuda90: cuda90
-    # cuda91: cuda91
-    # cuda92: cuda92
-    # cuda100: cuda100
-    # cuda101: cuda101
 
 [testenv:py{310}]
 commands =
