--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -14,7 +14,7 @@ flakehell>=0.9
 hypothesis>=4.14
 isort~=5.1
 #mypy>=0.931
-git+https://github.com/python/mypy.git@9b3147701f054bf8ef42bd96e33153b05976a5e1#mypy
+git+https://github.com/python/mypy.git@9b3147701f054bf8ef42bd96e33153b05976a5e1#egg=mypy
 pre-commit~=2.15
 psutil>=5.0
 pygments>=2.7
