Use pathlib to determine module path

--- a/src/gt4py/backend/templates/stencil_module.py.in
+++ b/src/gt4py/backend/templates/stencil_module.py.in
@@ -28,10 +28,10 @@ gt_default_origin, gt_options
 
 #}
 
+import pathlib
 import time
 
 import numpy as np
-import scipy.special
 from numpy import dtype
 {{ imports }}
 
