Fix coverage settings

--- a/tox.ini
+++ b/tox.ini
@@ -22,4 +22,4 @@ whitelist_externals =
 [testenv:py{310}]
 commands =
     pytest --cache-clear --cov -v {posargs}
-    pytest --doctest-modules --cov --cov-append src/
+    pytest --doctest-modules --cov --cov-append -v src/
