--- a/.github/workflows/gt4py-functional.yml
+++ b/.github/workflows/gt4py-functional.yml
@@ -32,8 +32,8 @@ jobs:
         python -m pip uninstall --yes cytoolz # problem with undefined symbol
     - name: Test
       run: |
-        python -m pytest --cache-clear --cov  tests/
-        python -m pytest --cov --cov-append --doctest-modules src/
+        python -m pytest --cache-clear --cov -- tests/
+        python -m pytest --cov --cov-append --doctest-modules -- src/
     - name: Archive code coverage results
       uses: actions/upload-artifact@v2
       with:
