--- a/setup.cfg
+++ b/setup.cfg
@@ -93,13 +93,13 @@ format =
 #-- coverage --
 [coverage:run]
 branch = True
-source_pkgs =
-    eve
+source = 
+    src/
 
 [coverage:paths]
 source =
     src/
-    .tox/*/site-packages/
+    .tox/py3*/lib/python3.*/site-packages/
 
 [coverage:report]
 # Regexes for lines to exclude from consideration
@@ -116,7 +116,6 @@ ignore_errors = True
 
 [coverage:html]
 directory = tests/_reports/coverage_html
-
 
 #-- flake8 --
 [flake8]
@@ -196,7 +195,7 @@ allow_untyped_defs = False
 #-- pytest --
 [tool:pytest]
 # Set coverage options but do not run it by default (only tox does)
-addopts = --cov-config=setup.cfg --cov-report html
+addopts = --cov-config=setup.cfg --cov-report html --cov-report term
 markers =
     lit_suite: pytest item running a LLVM-lit test suite
 norecursedirs =
