Add tox ci again

--- a/.github/workflows/gt4py-functional-tox.yml
+++ b/.github/workflows/gt4py-functional-tox.yml
@@ -14,6 +14,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.10"]
+        tox-env-factors: ["", "atlas"]
 
     steps:
     - uses: actions/checkout@v2
@@ -37,5 +38,7 @@ jobs:
       run: |
         pyversion_no_dot="${{ matrix.python-version }}"
         pyversion_no_dot="${pyversion_no_dot/./}"
+        tox_env_factor="${{ matrix.tox-env-factors }}"
+        if [ -n ${tox_env_factor} ]; then tox_env_factor="-${tox_env_factor}"; fi
         pip install tox clang-format
-        tox -r -e py${pyversion_no_dot}
+        tox -r -e py${pyversion_no_dot}${tox_env_factor}
