--- a/tox.ini
+++ b/tox.ini
@@ -4,11 +4,11 @@
 [tox]
 envlist =
     py{310}
+    py{310}-atlas
 
 [testenv]
 deps =
     -r {toxinidir}/requirements-dev.txt
-    git+https://github.com/GridTools/atlas4py#egg=atlas4py
 install_command = python -m pip install --no-cache-dir {opts} {packages}
 commands_pre =
 passenv = BOOST_ROOT BOOST_HOME CUDA_HOME CUDA_PATH CXX CC OPENMP_CPPFLAGS OPENMP_LDFLAGS PIP_USER PYTHONUSERBASE
@@ -18,8 +18,11 @@ whitelist_externals =
     gcc
     g++
     ldd
-
-[testenv:py{310}]
 commands =
-    pytest --cache-clear --cov -v {posargs}
-    pytest --doctest-modules --cov --cov-append -v src/
+    pytest --cache-clear --cov -v -- {posargs}
+    pytest --doctest-modules --cov --cov-append -v -- src/
+
+[testenv:py{310}-atlas]
+deps =
+    -r {toxinidir}/requirements-dev.txt
+    git+https://github.com/GridTools/atlas4py#egg=atlas4py
