--- a/setup.cfg
+++ b/setup.cfg
@@ -93,13 +93,15 @@ format =
 #-- coverage --
 [coverage:run]
 branch = True
-source =
-    src/
+source_pkgs =
+    eve
+    functional
 
 [coverage:paths]
 source =
     src/
-    .tox/py3*/lib/python3.*/site-packages/
+    ;.tox/py3*/lib/python3.*/site-packages/
+    .tox/py310/lib/python3.10/site-packages/
 
 [coverage:report]
 # Regexes for lines to exclude from consideration
@@ -194,8 +196,8 @@ allow_untyped_defs = False
 
 #-- pytest --
 [tool:pytest]
-# Set coverage options but do not run it by default (only tox does)
-addopts = --cov-config=setup.cfg --cov-report html --cov-report term
+# Set coverage options but do not run it by default
+addopts = --cov-config=setup.cfg
 markers =
     lit_suite: pytest item running a LLVM-lit test suite
 norecursedirs =
