--- a/tox.ini
+++ b/tox.ini
@@ -7,10 +7,6 @@ envlist =
     py{310}-atlas
 
 [testenv]
-deps =
-    -r {toxinidir}/requirements-dev.txt
-install_command = python -m pip install --no-cache-dir {opts} {packages}
-commands_pre =
 passenv = BOOST_ROOT BOOST_HOME CUDA_HOME CUDA_PATH CXX CC OPENMP_CPPFLAGS OPENMP_LDFLAGS PIP_USER PYTHONUSERBASE
 whitelist_externals =
     /bin/bash
@@ -18,9 +14,18 @@ whitelist_externals =
     gcc
     g++
     ldd
+    rm
+deps =
+    -r {toxinidir}/requirements-dev.txt
+install_command = python -m pip install --no-cache-dir {opts} {packages}
+commands_pre =
+    rm -Rf tests_reports/coverage*
 commands =
     pytest --cache-clear --cov -v -- {posargs}
-    pytest --doctest-modules --cov --cov-append -v -- src/
+    pytest --doctest-modules --cov --cov-append -v src/
+commands_post =
+    coverage report --rcfile=setup.cfg
+    coverage html --rcfile=setup.cfg
 
 [testenv:py{310}-atlas]
 deps =
