--- a/.github/workflows_disabled/gt4py-functional.yml
+++ b/.github/workflows_disabled/gt4py-functional.yml
@@ -32,10 +32,5 @@ jobs:
         python -m pip uninstall --yes cytoolz # problem with undefined symbol
     - name: Test
       run: |
-        python -m pytest --cache-clear --cov -- tests/
-        python -m pytest --doctest-modules --cov --cov-append -- src/
-    - name: Archive code coverage results
-      uses: actions/upload-artifact@v2
-      with:
-        name: code-coverage-report
-        path: tests/_reports/
+        python -m pytest --cache-clear --cov -v -- tests/
+        python -m pytest --doctest-modules --cov --cov-append -v -- src/
