--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,8 @@
 envlist =
     py{310}
     py{310}-atlas
+    dev
+    dev-atlas
 
 [testenv]
 passenv = BOOST_ROOT BOOST_HOME CUDA_HOME CUDA_PATH CXX CC OPENMP_CPPFLAGS OPENMP_LDFLAGS PIP_USER PYTHONUSERBASE
@@ -31,3 +33,18 @@ commands_post =
 deps =
     -r {toxinidir}/requirements-dev.txt
     git+https://github.com/GridTools/atlas4py#egg=atlas4py
+
+[testenv:dev]
+basepython = python3.10
+usedevelop = True
+deps = -r {toxinidir}/requirements-dev.txt
+commands =
+
+[testenv:dev-atlas]
+basepython = python3.10
+usedevelop = True
+deps =
+    {[testenv:dev]deps}
+    git+https://github.com/GridTools/atlas4py#egg=atlas4py
+commands =
+
