--- a/setup.cfg
+++ b/setup.cfg
@@ -100,8 +100,7 @@ source_pkgs =
 [coverage:paths]
 source =
     src/
-    ;.tox/py3*/lib/python3.*/site-packages/
-    .tox/py310/lib/python3.10/site-packages/
+    .tox/py*/lib/python3.*/site-packages/
 
 [coverage:report]
 # Regexes for lines to exclude from consideration
