--- a/tox.ini
+++ b/tox.ini
@@ -3,10 +3,8 @@
 
 [tox]
 envlist =
-    py{310}
-    py{310}-atlas
-    dev
-    dev-atlas
+    py{310}-{base,atlas}
+    dev-{base,atlas}
 
 [testenv]
 passenv = BOOST_ROOT BOOST_HOME CUDA_HOME CUDA_PATH CXX CC OPENMP_CPPFLAGS OPENMP_LDFLAGS PIP_USER PYTHONUSERBASE
@@ -19,6 +17,7 @@ whitelist_externals =
     rm
 deps =
     -r {toxinidir}/requirements-dev.txt
+    atlas: git+https://github.com/GridTools/atlas4py#egg=atlas4py
 install_command = python -m pip install --no-cache-dir {opts} {packages}
 commands_pre =
     rm -Rf tests_reports/coverage*
@@ -29,22 +28,9 @@ commands_post =
     coverage report --rcfile=setup.cfg
     coverage html --rcfile=setup.cfg
 
-[testenv:py{310}-atlas]
-deps =
-    -r {toxinidir}/requirements-dev.txt
-    git+https://github.com/GridTools/atlas4py#egg=atlas4py
-
-[testenv:dev]
-basepython = python3.10
+[testenv:dev-{base,atlas}]
+deps = {[testenv]deps}
 usedevelop = True
-deps = -r {toxinidir}/requirements-dev.txt
+commands_pre =
 commands =
-
-[testenv:dev-atlas]
-basepython = python3.10
-usedevelop = True
-deps =
-    {[testenv:dev]deps}
-    git+https://github.com/GridTools/atlas4py#egg=atlas4py
-commands =
-
+commands_post =
