--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -28,7 +28,7 @@ jobs:
         mv boost_1_76_0/boost boost/include/
         echo "BOOST_ROOT=${PWD}/boost" >> $GITHUB_ENV
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install python dependencies
@@ -47,19 +47,19 @@ jobs:
         name: code-coverage-report
         path: tests/_reports/
 
-  # artefact-upload:
-  #   # Info: https://smokeshow.helpmanual.io/
-  #   needs:
-  #   - tox-tests
-  #   runs-on: ubuntu-latest
+  artefact-upload:
+    ## Info: https://smokeshow.helpmanual.io/
+    needs:
+    - tox-tests
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #   - name: install tools
-  #   - uses: actions/setup-python@v2
-  #     with:
-  #       python-version: '3.8'
+    steps:
+    - name: Install tools
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
   #       cache: 'pip'
-  #   - run: pip install smokeshow
+    - run: pip install smokeshow
 
   #   - name: get coverage artifacts
   #     uses: actions/download-artifact@v2
