--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -47,17 +47,27 @@ jobs:
         name: code-coverage-report
         path: tests/_reports/
 
+
   artefact-upload:
-    needs: tox-tests
     runs-on: ubuntu-latest
 
     steps:
     - name: Install tools
-    - uses: actions/setup-python@v2
+      uses: actions/setup-python@v2
       with:
-        python-version: '3.8'
-        cache: 'pip'
-    - run: pip install smokeshow
+        python-version: "3.8"
+
+  # artefact-upload:
+  #   # needs: tox-tests
+  #   runs-on: ubuntu-latest
+
+  #   steps:
+  #   - name: Install tools
+  #   - uses: actions/setup-python@v2
+  #     with:
+  #       python-version: '3.8'
+  #       cache: 'pip'
+  #   - run: pip install smokeshow
 
   ## Info: https://smokeshow.helpmanual.io/
   #   - name: get coverage artifacts
