--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -49,6 +49,7 @@ jobs:
 
 
   artefact-upload:
+    # Info: https://smokeshow.helpmanual.io/
     runs-on: ubuntu-latest
     needs: tox-tests
 
@@ -61,18 +62,18 @@ jobs:
     - name: Install tools
       run: pip install smokeshow
 
-  ## Info: https://smokeshow.helpmanual.io/
-  #   - name: get coverage artifacts
-  #     uses: actions/download-artifact@v2
-  #     with:
-  #       name: coverage_files
-  #       path: test/_reports/coverage_html
+    - name: Get coverage artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: coverage_files
+        path: test/_reports/coverage_html
 
-  #   - run: smokeshow upload test/_reports/coverage_html
-  #     env:
-  #       SMOKESHOW_GITHUB_STATUS_DESCRIPTION: Coverage {coverage-percentage}
-  #       SMOKESHOW_GITHUB_COVERAGE_THRESHOLD: 75
-  #       SMOKESHOW_GITHUB_CONTEXT: coverage
-  #       SMOKESHOW_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #       SMOKESHOW_GITHUB_PR_HEAD_SHA: ${{ github.event.workflow_run.head_sha }}
-  #       SMOKESHOW_AUTH_KEY: ${{ secrets.SMOKESHOW_AUTH_KEY }}
+    - name: Upload reports
+      run: smokeshow upload test/_reports/coverage_html
+      env:
+        SMOKESHOW_GITHUB_STATUS_DESCRIPTION: Coverage {coverage-percentage}
+        SMOKESHOW_GITHUB_COVERAGE_THRESHOLD: 75
+        SMOKESHOW_GITHUB_CONTEXT: coverage
+        SMOKESHOW_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SMOKESHOW_GITHUB_PR_HEAD_SHA: ${{ github.event.workflow_run.head_sha }}
+        SMOKESHOW_AUTH_KEY: ${{ secrets.SMOKESHOW_AUTH_KEY }}
