--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -64,8 +64,7 @@ jobs:
     - name: Get coverage artifacts
       uses: actions/download-artifact@v2
       with:
-        name: coverage_files
-        path: test/_reports/coverage_html
+        name: code-coverage-report
 
     - name: Upload reports
       run: smokeshow upload test/_reports/coverage_html
