--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -65,9 +65,10 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: code-coverage-report
+        path: coverage_html
 
     - name: Upload reports
-      run: smokeshow upload test/_reports/coverage_html
+      run: smokeshow upload coverage_html
       env:
         SMOKESHOW_GITHUB_STATUS_DESCRIPTION: Coverage {coverage-percentage}
         SMOKESHOW_GITHUB_COVERAGE_THRESHOLD: 75
