Add contexts to coverage reports

--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ commands =
     pytest --doctest-modules --cov --cov-append -v src/
 commands_post =
     coverage report --rcfile=setup.cfg
-    coverage html --rcfile=setup.cfg
+    coverage html --rcfile=setup.cfg --show-contexts
 
 [testenv:dev-{base,atlas}]
 deps = {[testenv]deps}
