--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -8,16 +8,13 @@ on:
     branches:
     - functional
 
-permissions:
-  statuses: write
-
 jobs:
   tox-tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.10"]
-        tox-env-factors: ["base"]  #, "atlas"]
+        tox-env-factors: ["base", "atlas"]
 
     steps:
     - uses: actions/checkout@v2
@@ -49,34 +46,3 @@ jobs:
       with:
         name: code-coverage-report
         path: tests/_reports/
-
-
-  artefact-upload:
-    # Info: https://smokeshow.helpmanual.io/
-    runs-on: ubuntu-latest
-    needs: tox-tests
-
-    steps:
-    - name: Setup Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: "3.8"
-
-    - name: Install tools
-      run: pip install smokeshow
-
-    - name: Get coverage artifacts
-      uses: actions/download-artifact@v2
-      with:
-        name: code-coverage-report
-        path: coverage_html
-
-    - name: Upload reports
-      run: smokeshow upload coverage_html/*
-      env:
-        SMOKESHOW_GITHUB_STATUS_DESCRIPTION: Coverage {coverage-percentage}
-        SMOKESHOW_GITHUB_COVERAGE_THRESHOLD: 75
-        SMOKESHOW_GITHUB_CONTEXT: coverage
-        SMOKESHOW_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SMOKESHOW_GITHUB_PR_HEAD_SHA: ${{ github.event.workflow_run.head_sha }}
-        SMOKESHOW_AUTH_KEY: ${{ secrets.SMOKESHOW_AUTH_KEY }}
