--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.10"]
-        tox-env-factors: ["base", "atlas"]
+        tox-env-factors: ["base"]  #, "atlas"]
 
     steps:
     - uses: actions/checkout@v2
