--- a/setup.cfg
+++ b/setup.cfg
@@ -115,6 +115,9 @@ exclude_lines =
 
 ignore_errors = True
 
+[coverage:xml]
+output = tests/_reports/coverage.xml
+
 [coverage:html]
 directory = tests/_reports/coverage_html
 
