--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Tox
+name: Tests
 
 on:
   push:
@@ -49,30 +49,36 @@ jobs:
       with:
         name: code-coverage-report
         path: tests/_reports/
+        retention-days: 5
 
-
-  artefact-upload:
-    # Info: https://smokeshow.helpmanual.io/
+  upload-coverage-reports:
     runs-on: ubuntu-latest
     needs: tox-tests
 
     steps:
-    - name: Setup Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: "3.8"
-
-    - name: Install tools
-      run: pip install smokeshow
-
     - name: Get coverage artifacts
       uses: actions/download-artifact@v2
       with:
         name: code-coverage-report
         path: coverage_html
+    - name: Upload to Codecov
+    - uses: codecov/codecov-action@v2
+      with:
+        files: tests/_reports/coverage.xml
+        #flags: unittests # optional
+        name: gt4py-functional
+        fail_ci_if_error: false # optional (default = false)
+        verbose: true # optional (default = false)
 
-    - name: Upload reports
-      run: smokeshow upload coverage_html/*
+    - name: Setup smokeshow uploads
+      uses: actions/setup-python@v2
+      with:
+        python-version: "3.8"
+    - name: Upload reports to smokeshow
+      # Info: https://smokeshow.helpmanual.io/
+      run: |
+        pip install smokeshow
+        smokeshow upload coverage_html/*
       env:
         SMOKESHOW_GITHUB_STATUS_DESCRIPTION: Coverage {coverage-percentage}
         SMOKESHOW_GITHUB_COVERAGE_THRESHOLD: 70
