--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ commands =
     pytest --cache-clear --cov -v -- {posargs}
     pytest --doctest-modules --cov --cov-append -v src/
 commands_post =
-    coverage report --rcfile=setup.cfg
+    coverage xml --rcfile=setup.cfg
     coverage html --rcfile=setup.cfg --show-contexts
 
 [testenv:dev-{base,atlas}]
