--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,7 +51,7 @@ jobs:
         path: tests/_reports/
         retention-days: 5
 
-  smokeshow-coverage:
+  coverage-uploads:
     runs-on: ubuntu-latest
     needs: tox-tests
 
@@ -61,10 +61,21 @@ jobs:
       with:
         name: code-coverage-report
         path: coverage_html
+
+    - name: Upload to Codecov
+      uses: codecov/codecov-action@v2
+      with:
+        files: tests/_reports/coverage.xml
+        #flags: unittests # optional
+        name: gt4py-functional
+        fail_ci_if_error: false # optional (default = false)
+        verbose: true # optional (default = false)
+
     - name: Setup smokeshow uploads
       uses: actions/setup-python@v2
       with:
         python-version: "3.8"
+
     - name: Upload reports to smokeshow
       # Info: https://smokeshow.helpmanual.io/
       run: |
@@ -77,23 +88,3 @@ jobs:
         SMOKESHOW_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SMOKESHOW_GITHUB_PR_HEAD_SHA: ${{ github.event.workflow_run.head_sha }}
         SMOKESHOW_AUTH_KEY: ${{ secrets.SMOKESHOW_AUTH_KEY }}
-
-  codecov-coverage:
-    runs-on: ubuntu-latest
-    needs: tox-tests
-
-    steps:
-    - name: Get coverage artifacts
-      uses: actions/download-artifact@v2
-      with:
-        name: code-coverage-report
-        path: coverage_html
-    - name: Upload to Codecov
-      uses: codecov/codecov-action@v2
-      with:
-        files: tests/_reports/coverage.xml
-        #flags: unittests # optional
-        name: gt4py-functional
-        fail_ci_if_error: false # optional (default = false)
-        verbose: true # optional (default = false)
-
