--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -33,19 +33,19 @@ jobs:
           fail_ci_if_error: false # optional (default = false)
           verbose: true # optional (default = false)
 
-      # Info: https://smokeshow.helpmanual.io/
-      - name: Setup smokeshow uploads
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.8"
-      - run: pip install smokeshow
+      # # Info: https://smokeshow.helpmanual.io/
+      # - name: Setup smokeshow uploads
+      #   uses: actions/setup-python@v2
+      #   with:
+      #     python-version: "3.8"
+      # - run: pip install smokeshow
       
-      - name: Upload reports to smokeshow
-        run: smokeshow upload tests/_reports/coverage_html
-        env:
-          SMOKESHOW_GITHUB_STATUS_DESCRIPTION: Coverage {coverage-percentage}
-          SMOKESHOW_GITHUB_COVERAGE_THRESHOLD: 80
-          SMOKESHOW_GITHUB_CONTEXT: coverage
-          SMOKESHOW_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SMOKESHOW_GITHUB_PR_HEAD_SHA: ${{ github.event.workflow_run.head_sha }}
-          SMOKESHOW_AUTH_KEY: ${{ secrets.SMOKESHOW_AUTH_KEY }}
+      # - name: Upload reports to smokeshow
+      #   run: smokeshow upload tests/_reports/coverage_html
+      #   env:
+      #     SMOKESHOW_GITHUB_STATUS_DESCRIPTION: Coverage {coverage-percentage}
+      #     SMOKESHOW_GITHUB_COVERAGE_THRESHOLD: 80
+      #     SMOKESHOW_GITHUB_CONTEXT: coverage
+      #     SMOKESHOW_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     SMOKESHOW_GITHUB_PR_HEAD_SHA: ${{ github.event.workflow_run.head_sha }}
+      #     SMOKESHOW_AUTH_KEY: ${{ secrets.SMOKESHOW_AUTH_KEY }}
