Use precompiled atlas

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ whitelist_externals =
     rm
 deps =
     -r {toxinidir}/requirements-dev.txt
-    atlas: git+https://github.com/GridTools/atlas4py#egg=atlas4py
+    atlas: pip install -i https://test.pypi.org/simple/ atlas4py
 install_command = python -m pip install --no-cache-dir {opts} {packages}
 commands_pre =
     rm -Rf tests_reports/coverage*
