--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,8 @@ envlist =
 
 [testenv]
 passenv = BOOST_ROOT BOOST_HOME CUDA_HOME CUDA_PATH CXX CC OPENMP_CPPFLAGS OPENMP_LDFLAGS PIP_USER PYTHONUSERBASE
+setenv = 
+    PIP_EXTRA_INDEX_URL = https://test.pypi.org/simple/
 whitelist_externals =
     /bin/bash
     make
@@ -17,7 +19,7 @@ whitelist_externals =
     rm
 deps =
     -r {toxinidir}/requirements-dev.txt
-    atlas: pip install -i https://test.pypi.org/simple/ atlas4py
+    atlas: atlas4py
 install_command = python -m pip install --no-cache-dir {opts} {packages}
 commands_pre =
     rm -Rf tests_reports/coverage*
