--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -71,6 +71,7 @@ repos:
       (?x)^(
       src/eve/datamodels.py | # until datamodels is upgraded to 3.10
       src/functional/ffront/func_to_foast.py | # until mypy supports match
+      src/functional/ffront/func_to_past.py  | # until mypy supports match
       src/functional/ffront/symbol_makers.py | # until mypy supports match
       src/functional/ffront/type_info.py | # until mypy supports match
       src/functional/ffront/foast_to_itir.py | # until mypy supports match
