--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -69,8 +69,10 @@ repos:
   - id: mypy
     exclude: |
       (?x)^(
-      src/eve/datamodels.py | # until datamodels is upgraded to 3.10
+      src/eve/datamodels\.py | # until datamodels is upgraded to 3.10
       src/functional/ffront/func_to_foast.py | # until mypy supports match
+      src/functional/ffront/func_to_past.py | # until mypy supports match
+      src/functional/ffront/decorator.py | # until mypy supports match
       src/functional/ffront/past_to_itir.py | # until mypy supports match
       src/functional/ffront/symbol_makers.py | # until mypy supports match
       src/functional/ffront/type_info.py | # until mypy supports match
