--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -69,7 +69,7 @@ repos:
   - id: mypy
     exclude: |
       (?x)^(
-      src/eve/datamodels\.py | # until datamodels is upgraded to 3.10
+      src/eve/datamodels.py | # until datamodels is upgraded to 3.10
       src/functional/ffront/func_to_foast.py | # until mypy supports match
       src/functional/ffront/func_to_past.py | # until mypy supports match
       src/functional/ffront/decorator.py | # until mypy supports match
