Clean up gtc:numpy backend and fix issues (#628)
Rewrites the numpy backend to resolve a number of outstanding bugs. The biggest changes are:
- Uses the SymbolName, SymbolRef utilities of eve.
- Tracks scalar vs vector expr type and applies broadcasts, serial casts, and vector casts.
- Calls oir utility to compute extents when lowering to npir, and stores this in the npir.
- Enables the gtc:numpy backend for integration tests that were skipping it.
- Add GT_CACHE_PYTEST_DIR env var to control pytest dir. This is useful for debugging, because breakpoints can be set in the generated Python code.

Resolves #632.
Resolves #621.

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ _local_
 
 ### GT4Py ####
 .gt_cache/
-.gt_cache_pytest_*/
+.gt_cache_pytest*/
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
@@ -68,6 +68,7 @@ instance/
 
 # Sphinx documentation
 docs/_build/
+docs/**/_source/
 
 # PyBuilder
 target/
