While loops in GTC toolchain (#422)
This PR implements the while loop construct in the GTC toolchain.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
   - id: check-case-conflict
 #  - id: check-json
   - id: check-merge-conflict
+    exclude_types: [rst]
   - id: check-toml
   - id: check-yaml
   - id: debug-statements
