Address review comments

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -78,6 +78,7 @@ repos:
       src/functional/ffront/type_info.py | # until mypy supports match
       src/functional/ffront/foast_to_itir.py | # until mypy supports match
       src/functional/ffront/foast_passes/type_deduction.py | # until mypy supports match
+      src/functional/ffront/past_passes/type_deduction.py | # until mypy supports match
       docs/eve/conf.py |
       tests/eve_tests/definitions.py |
       tests/functional_tests/.* |
