--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,3 @@
---extra-index-url https://testpypi.python.org/simple
-atlas4py>=0.26
 check-manifest>=0.40
 coverage>=5.0
 darglint>=1.6
@@ -29,3 +27,4 @@ sphinx>=3.1
 sphinx_rtd_theme>=0.4
 tox>=3.14
 devtools>=0.6
+-r requirements-dev-testpypi.txt
