--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ install_requires =
     cytoolz>=0.11
     devtools>=0.5
     jinja2>=2.10
+    lark-parser>=0.12
     mako>=1.1
     networkx>=2.4
     numpy>=1.21
