--- a/setup.cfg
+++ b/setup.cfg
@@ -45,7 +45,7 @@ install_requires =
     black>=19.3b0
     cached-property>=1.5
     click>=7.1
-    dace@git+https://github.com/spcl/dace.git@aa94b8f603e2341215647ae0ce4056df55049fe2
+    dace==0.13
     jinja2>=2.10
     numpy>=1.15
     scipy>=1.4
