--- a/ci/cscs-ci.yml
+++ b/ci/cscs-ci.yml
@@ -41,12 +41,11 @@ stages:
     # The actual values will be taken from environment variables with the same
     # names, if they exist, or otherwise the defaults in the Dockerfile will be used.
     # To override the defaults, just define these variables in the actual job.
-    DOCKER_BUILD_ARGS:  '["BASE_IMAGE", "CACHE_DIR", "EXTRA_APTGET", "EXTRA_UV_ENV_VARS", "EXTRA_UV_PIP_ARGS", "EXTRA_UV_SYNC_ARGS", "GT4PY_REPO", "PY_VERSION", "UV_VERSION", "WORKDIR_PATH" ]'
+    DOCKER_BUILD_ARGS: '["BASE_IMAGE", "CACHE_DIR", "EXTRA_APTGET", "EXTRA_UV_ENV_VARS", "EXTRA_UV_PIP_ARGS", "EXTRA_UV_SYNC_ARGS", "GT4PY_REPO", "PY_VERSION", "UV_VERSION", "WORKDIR_PATH" ]'
   before_script:
-    # We create a tag that depends on the SHA value of ci/base.Dockerfile,
-    # the docker build arguments (since we use a parameterized Docker file),
-    # and the contents of the `uv.lock` file (which contains the version of
-    # python packages used in the base image).
+    # We create a tag that depends on the SHA value of ci/Dockerfile,
+    # the docker build arguments since the Docker file is heavily parameterized,
+    # and the contents of the `uv.lock` with the python dependencies versions.
     - DOCKER_TAG=`echo "$(cat ${DOCKERFILE}) ${DOCKER_BUILD_ARGS} $(cat uv.lock)" | sha256sum | head -c 16`
     - export GT4PY_IMAGE_PREFIX=${CSCS_REGISTRY_PATH}/public/${ARCH}/base/gt4py-ci:${DOCKER_TAG}
     - echo "GT4PY_IMAGE_PREFIX=${GT4PY_IMAGE_PREFIX}" >> base.env
@@ -104,17 +103,17 @@ build_cscs_gh200:
       - SUBPACKAGE: [cartesian]
         VARIANT: ["internal", "dace"]
         SUBVARIANT: ["cuda12", "cpu"]
-        PY_VERSION: ${PYTHON_VERSIONS}
+        PY_VERSION: *python_versions
       - SUBPACKAGE: eve
-        PY_VERSION: ${PYTHON_VERSIONS}
+        PY_VERSION: *python_versions
       - SUBPACKAGE: next
         VARIANT: ["internal", "dace"]
         SUBVARIANT: ["cuda12", "cpu"]
         DETAIL: ["nomesh", "atlas"]
-        PY_VERSION: ${PYTHON_VERSIONS}
+        PY_VERSION: *python_versions
       - SUBPACKAGE: [storage]
         VARIANT: ["cuda12", "cpu"]
-        PY_VERSION: ${PYTHON_VERSIONS}
+        PY_VERSION: *python_versions
   rules:
     - if: $SUBPACKAGE == 'next' && $VARIANT == 'dace' && $DETAIL == 'nomesh'
       variables:
@@ -124,6 +123,7 @@ build_cscs_gh200:
     - when: on_success
   script:
     # Since the image does not contain the repo, we need to clone it before running the tests
+    #CSCS_CI_ORIG_CLONE_URL
     - mkdir -p "${WORKDIR}/gt4py" && git clone --depth 1 --revision "${CI_COMMIT_SHA}" "${GT4PY_REPO}" "${WORKDIR}/gt4py"
     - export NOX_SESSION_ARGS="${VARIANT:+($VARIANT}${SUBVARIANT:+, $SUBVARIANT}${DETAIL:+, $DETAIL}${VARIANT:+)}"
     - cd "${WORKDIR}/gt4py" && nox -s "test_${SUBPACKAGE}-${PY_VERSION}${NOX_SESSION_ARGS}"
