--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -10,7 +10,6 @@ ENV WORKDIR=${WORKDIR_PATH}
 ARG DEBIAN_FRONTEND=noninteractive
 ARG EXTRA_APTGET=""
 RUN <<EOF
-apt-get install software-properties-common
 apt-add-repository ppa:git-core/ppa && apt-get update -qq
 apt-get install -qq -y --no-install-recommends \
     # strace \
@@ -35,7 +34,7 @@ apt-get install -qq -y --no-install-recommends \
     # rustc \
     # htop \
     ${EXTRA_APTGET}
-rm -rf /var/lib/apt/lists/*
+apt-get clean && rm -rf /var/lib/apt/lists/*
 EOF
 
 # Install uv
