fix git in a different way

--- a/ci/cscs-ci.yml
+++ b/ci/cscs-ci.yml
@@ -123,8 +123,9 @@ build_cscs_gh200:
     - when: on_success
   script:
     # Since the image does not contain the repo, we need to clone it before running the tests
-    #CSCS_CI_ORIG_CLONE_URL
-    - mkdir -p "${WORKDIR}/gt4py" && git clone --depth 1 --revision "${CI_COMMIT_SHA}" "${GT4PY_REPO}" "${WORKDIR}/gt4py"
+    #- mkdir -p "${WORKDIR}/gt4py" && git clone --depth 1 --revision "${CI_COMMIT_SHA}" "${GT4PY_REPO}" "${WORKDIR}/gt4py"
+    - mkdir -p "${WORKDIR}/gt4py" && git clone --depth 1 "${CSCS_CI_ORIG_CLONE_URL}" "${WORKDIR}/gt4py"
+    - cd "${WORKDIR}/gt4py" && git fetch --depth 1 origin "${CI_COMMIT_SHA}" && git checkout "${CI_COMMIT_SHA}"
     - export NOX_SESSION_ARGS="${VARIANT:+($VARIANT}${SUBVARIANT:+, $SUBVARIANT}${DETAIL:+, $DETAIL}${VARIANT:+)}"
     - cd "${WORKDIR}/gt4py" && nox -s "test_${SUBPACKAGE}-${PY_VERSION}${NOX_SESSION_ARGS}"
 
